[project]
name = "obr"
version = "0.3.0"
authors = [
    {name = "Gregor Olenik", email = "go@hpsim.de"}
]
description="A tool to create and run OpenFOAM parameter studies"
readme="README.md"
requires-python = ">=3.6"
keywords=[
   "OpenFOAM", "Parameter Studies", "Simulation Provisioning", "Workflow Manager"
]
license = {text = "BSD-2-Clause"}

dependencies = [
    "click",
    "PyYAML",
    "signac==1.8.0",
    "signac-flow==0.23.0",
    "GitPython==3.1.31",
    "pandas",
    "DeepDiff",
    "jsonschema==4.19.1",
    "Owls @ git+https://github.com/greole/Owls.git@Owls2.0"
]

dynamic = ["scripts", "classifiers",  "requies-python" ]

[project_urls]
Documentation= "https://obr.readthedocs.io/"
Changelog= "https://obr.readthedocs.io/en/latest/changelog.html"
Issues= "https://github.com/hpsim/obr/issues"

[project.optional-dependencies]
doc = [
    "sphinx~=4.2.0",
    "sphinx-autoapi",
    "myst_parser"
]
test = [
    "pytest",
    "coverage",
    "gitpython"
]

[tool.black]
preview = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]